fixed menu with new file names

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <!-- Bootstrap nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Ride and Drive</a>
+        <a class="navbar-brand" href="order.html">Ride and Drive</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Order <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="order.html">Order <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="products.html">Products</a>
@@ -46,7 +46,7 @@
         <h1>Page List</h1>
       <ul >
         <li>
-          <a  href="index.html">Order </a>
+          <a  href="order.html">Order </a>
           <p>Create an order. Uses SELECT queries to populate dropdown lists, and 
               an INSERT query to put the new data into a table. Items are listed below
               and can be edited in the field or deleted from the order using the buttons 
