--- a/customers.html
+++ b/customers.html
@@ -43,7 +43,7 @@
 <!-- Form Element -->
 <div class="container">
   <h1>Manage Customers</h1>
-  <form class="row">
+  <form class="row" onsubmit="return false">
     <div class="form-group col-sm-6 col-md-4">
       <label for="inputFirstName">First Name</label>
       <input type="text" class="form-control" id="inputFirstName"  placeholder="First Name">
@@ -62,7 +62,7 @@
       <input type="text" class="form-control" id="inputPhone"  placeholder="Phone Number">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
       </div>
     </div>
@@ -73,55 +73,15 @@
       <label for="exampleFormControlTextarea1">Notes</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
-    <div class="form-group col-sm-12"><button type="submit" class="btn btn-primary">Add Customer</button></div>
+    <div class="form-group col-sm-12"><button id="new_data" type="submit" class="btn btn-primary">Add Customer</button></div>
     
   </form>
-<div class="row">
-  <table>
 
-    <tr >
-      <th >First Name</th>
-      <th >Last Name</th>
-      <th >Address</th>
-      <th >City</th>
-      <th >State</th>
-      <th >Zip</th>
-      <th >Phone</th>
-      <th >Email</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-    </tr>
-    <tr>
-      <td ><input style="width: 100px" type="text" value="Mark"/></td>
-      <td><input style="width: 100px" type="text" value="Mann"/></td>
-      <td ><input style="width: 100px" type="text" value="123 Riverside Drive"/></td>
-      <td ><input style="width: 100px" type="text" value="Chicago"/></td>
-      <td ><input style="width: 25px" type="text" value="IL"/></td>
-      <td><input style="width: 40px" type="text" value="46077"/></td>
-      <td><input style="width: 100px" type="text" value="555-999-9999"/></td>
-      <td><input style="width: 100px" type="text" value="markman@gmail.com"/></td>
-      <td><button type="submit" class="btn btn-primary">Update</button></td>
-      <td><button type="submit" class="btn btn-primary">Delete</button></td>
-    </tr>
-    <tr>
-      <td ><input style="width: 100px" type="text" value="Curtis"/></td>
-      <td><input style="width: 100px" type="text" value="Chubbuck"/></td>
-      <td ><input style="width: 100px" type="text" value="123 Altadena Drive"/></td>
-      <td ><input style="width: 100px" type="text" value="Arcadia"/></td>
-      <td ><input style="width: 25px" type="text" value="CA"/></td>
-      <td><input style="width: 40px" type="text" value="90045"/></td>
-      <td><input style="width: 100px" type="text" value="555-999-9999"/></td>
-      <td><input style="width: 100px" type="text" value="cchub@gmail.com"/></td>
-      <td><button type="submit" class="btn btn-primary">Update</button></td>
-      <td><button type="submit" class="btn btn-primary">Delete</button></td>
-    </tr>
-  </table>
-</div>
-</div>
 <!-- end form element  -->
     <!-- Bootstrap JS & JQ files -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="customers.js"></script>
 </body>
 </html>
