--- a/brands.html
+++ b/brands.html
@@ -43,46 +43,27 @@
 <!-- Form Element -->
 <div class="container">
   <h1>Add a Brand</h1>
-<form class="row">
+<form class="row" onsubmit="return false">
 
   <div class="form-group col-sm-6 col-md-4 col-lg-3">
     <label for="inputBrand">Brand</label>
-    <input type="text" class="form-control" id="inputBrand"  placeholder="Enter brand">
+    <input type="text" class="form-control" id="brandname_input"  placeholder="Enter brand">
   </div>
 
   <div class="form-group col-sm-12">
-    <button type="submit" class="btn btn-primary">Add to Brands</button></div>
-  
+    <button type="submit" id="new_data" class="btn btn-primary">Add to Brands</button></div>
+
+
 </form>
-<div class="row">
-  <table>
-    <tr >
-      <th >Brand</th>
-      
-      
-    </tr>
-    <tr>
-      <td >Honda</td>
-    </tr>
-    <tr>
-      <td >BMW</td>
-    </tr>
-    <tr>
-      <td >Ducati</td>
-    </tr>
-    <tr>
-      <td >Suzuki</td>
-    </tr>
-    <tr>
-      <td >Moto Guzzi</td>
-    </tr>
-  </table>
-</div>
-</div>
+
+
+
+
 <!-- end form element  -->
     <!-- Bootstrap JS & JQ files -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="brands.js"></script>
 </body>
 </html>
