--- a/order.html
+++ b/order.html
@@ -119,7 +119,7 @@
       <option>CB650R</option>
     </select></td>
       <td>$8,749</td>
-      
+      <td><button type="submit" class="btn btn-primary">Update</button></td>
       <td><button type="submit" class="btn btn-primary">Delete</button></td>
     </tr>
  
